--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+pytorchvideo @ git+https://github.com/facebookresearch/pytorchvideo.git@28fe037d212663c6a24f373b94cc5d478c8c1a1d
 timm==0.6.7
 ftfy
 regex
